--- a/src/App.css
+++ b/src/App.css
@@ -41,8 +41,9 @@
   display: none;
 }
 
-@include media-breakpoint-up(sm) {
-  .custom-class {
-    display: block;
-  }
+.special_modal {
+  border: 1px solid red!important;
+  border-radius: 10px;
+  background-color: #212529!important;
+  color: #fff!important;
 }
