--- a/src/estilos/style.css
+++ b/src/estilos/style.css
@@ -3,3 +3,11 @@
     border: 1px solid #ddd;
     height: 10rem;
 }
+
+.connectFB{
+    font-family: monospace;
+    font-size: small;
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+}
